resources/demo2/authorizationPolicy.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "demo2-get"
  namespace: default
spec:
  selector:
    matchLabels:
      app: demo2
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/default/sa/demo1-sa"]
    to:
    - operation:
        methods: ["GET"]
